add support for the SET cmd

--- a/config.template
+++ b/config.template
@@ -2,10 +2,10 @@ reposerver="repoogn.ddns.net:50080"
 DBpath='/nfs/OGN/DIRdata/' 
 DBhost='ubuntu' 
 DBname='OGNDB' 
-SQLite3='OGN.db' 
+DBSQLite3='OGN.db' 
 DBuser='ogn' 
 DBpasswd='ogn' 
 DBuserread='ognread' 
 DBpasswdread='ognread' 
 MySQL=True
-
+PYsrc='/nfs/OGN/src'
